<?xml version="1.0"?>
<package format="3">
  <name>gz_pose_updater</name>
  <version>0.0.1</version>
  <description>Pose updater plugin for Gazebo Harmonic using ROS 2</description>
  <maintainer email="maddieedmondson19@gmail.com">Maddie Edmondson</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>gz-sim8</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>